test/arrays/bradc/twoDasTwoOneDs.good
twoDasTwoOneDs.chpl:11: error: unresolved access of '[domain(2,int(64),one)] real(64)' by '(1)'
